--- a/svelte/public/bundle.css
+++ b/svelte/public/bundle.css
@@ -55,6 +55,10 @@
 	transition: all .3s;
 }
 
+html {
+	background: transparent;
+}
+
 html, body {
 	width: 800px;
 	height: 600px;
@@ -65,7 +69,7 @@ html, body {
 }
 
 body {
-	background: var(--gray-900);
+	background: transparent;
 	color: var(--gray-50);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 1.6rem;
@@ -75,6 +79,8 @@ body {
 	width: 100%;
 	height: 100%;
 	padding: 1.6rem;
+	border-radius: 20px;
+	background: var(--gray-900);
 }
 
 .search {
