--- a/svelte/public/bundle.css
+++ b/svelte/public/bundle.css
@@ -1,7 +1,7 @@
 /*******************************
  * Variables
  */
-:root {
+ :root {
 	--gray-50: #F9FAFB;
 	--gray-100: #F3F4F6;
 	--gray-200: #E5E7EB;
@@ -73,6 +73,7 @@ body {
 	color: var(--gray-50);
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 1.6rem;
+	padding:2rem;
 }
 
 .container {
@@ -81,6 +82,7 @@ body {
 	padding: 1.6rem;
 	border-radius: 20px;
 	background: var(--gray-900);
+	box-shadow:0 1rem 1rem rgb(0 0 0 / 33%);
 }
 
 .search {
@@ -120,16 +122,22 @@ body {
 
 .card {
 	position: relative;
-	margin: 0 1rem 1.6rem;
-	border: solid 1px var(--gray-800);
-	border-radius: 1rem;
-	background: var(--gray-800);
-	color: var(--gray-50);
+    margin: 0 1rem 1.6rem;
+    border: solid 1px var(--gray-800);
+    border-radius: 1rem;
+    background: var(--gray-800);
+    color: var(--gray-50);
+    display: flex;
+    flex-direction: row;
 }
 
 .card.selected {
 	border-color: var(--gray-700);
 	background: var(--gray-700);
+}
+
+.delete{
+	border-radius:0 1rem 1rem 0;
 }
 
 .card:last-child {
@@ -163,24 +171,20 @@ body {
 }
 
 .card .delete {
-	position: absolute;
-	top: 50%;
-	right: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	width: 40px;
-	height: 100%;
-	text-align: center;
-	color: #fb4a4a;
-	cursor: pointer;
-	background: var(--gray-800);
-	transform: translateY(-50%);
+    text-align: center;
+    color: #fb4a4a;
+    cursor: pointer;
+    background: var(--gray-800);
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
 .card.selected .delete {
 	/* border: solid 1px var(--gray-800); */
     border-radius: 0 1rem 1rem 0;
+	background: var(--gray-700);
 }
 
 @media (prefers-color-scheme: light) {
